RESOLVED FIXED50962
HTMLMediaElement::endedPlayback should not return true if duration is zero
https://bugs.webkit.org/show_bug.cgi?id=50962
Summary HTMLMediaElement::endedPlayback should not return true if duration is zero
Eric Carlson
Reported 2010-12-13 13:04:08 PST
A media element with a duration of zero can not play so it can never have "ended playback".
Attachments
Proposed patch (1.67 KB, patch)
2010-12-13 13:16 PST, Eric Carlson
koivisto: review+
Eric Carlson
Comment 1 2010-12-13 13:16:54 PST
Created attachment 76424 [details] Proposed patch
Eric Carlson
Comment 2 2010-12-13 13:58:49 PST
Note You need to log in before you can comment on or make changes to this bug.