2010-12-13  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Antti Koivisto.

        HTMLMediaElement::endedPlayback should not return true if duration is zero
        https://bugs.webkit.org/show_bug.cgi?id=50962

        (WebCore::HTMLMediaElement::endedPlayback): Don't return true when duration is zero because a
        media file can't play if it has no duration, therefore it can't have ended playback.



Canonical link: https://commits.webkit.org/64309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73957 268f45cc-cd09-0410-ab3c-d52691b4dbfc