WebCore/html/HTMLMediaElement.cpp
@@ -2025,13 +2025,13 @@ bool HTMLMediaElement::endedPlayback() const
     // readyState attribute is HAVE_METADATA or greater, 
     if (m_readyState < HAVE_METADATA)
         return false;
-    
-    // and the current playback position is the end of the media resource and the direction 
+
+    // and the current playback position is the end of the media resource and the direction
     // of playback is forwards and the media element does not have a loop attribute specified,
     float now = currentTime();
     if (m_playbackRate > 0)
-        return now >= dur && !loop();
-    
+        return dur > 0 && now >= dur && !loop();
+
     // or the current playback position is the earliest possible position and the direction 
     // of playback is backwards
     if (m_playbackRate < 0)
